# clamp-cc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/clamp_cc/: generator.py  main.py  models.py  parser.py  store.py  ui.py
tests/: test_generator.py  test_main.py  test_parser.py
tests/fixtures/: sample_session.jsonl
